--- a/singolo1.css
+++ b/singolo1.css
@@ -1,1 +1,98 @@
-/**/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+/*grids*/
+.container {
+    width: 100%;
+    max-width: 1020px;
+    margin: 0 auto;
+}
+
+/*header*/
+header {
+    background-color: #2d303a;
+    border-bottom: 6px solid #323746;
+    padding: 36px 30px 0;
+    height: 95px;
+}
+.header__row {
+    display: flex;
+    flex-direction: row;
+}
+.header__col {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+.header__logo {
+    font-size: 25px;
+    line-height: 16px;
+    letter-spacing: -0.4px;
+    color: #ffffff;
+    font-family: "Lato";
+    font-weight: 700;
+    text-align: left;
+    padding: 0 10px;
+}
+.header__logo span {
+    color: #f06c64;
+}
+/*header__nav*/
+.header__nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    padding: 0 10px;
+}
+.header__nav__link {
+
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 700;
+    line-height: 27px;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: color 0.3s linear;
+    cursor: pointer;
+    padding: 0 14px;
+
+    position: relative;
+}
+.header__nav__link.active {
+    color: #f06c64;
+}
+
+.header__nav__link:hover {
+    color:#f06c64;
+}
+
+.header__nav__link:last-child {
+    padding-right: 0;
+}
+.header__nav__link:first-child::before{
+    display: none;
+}
+.header__nav__link:before {
+    content: "";
+    display: block;
+    width: 2px;
+    height: 2px;
+    border-radius: 50%;
+    background-color: #494e62;
+
+    position: absolute;
+
+    left:0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.header__nav__link:hover {
+    color:#f06c64;
+}
