--- a/singolo1.css
+++ b/singolo1.css
@@ -160,3 +160,72 @@ header {
     right: 111px;
     z-index: 1;
 }
+/*services*/
+.services {
+    background-color: #f2f2f2;
+    border-bottom: 6px solid #ffffff;
+    padding: 67px 30px 36px;
+}
+.services__title {
+    font-size: 30px;
+    line-height: 18px;
+    color: #666d89;
+    font-family: "Lato";
+    font-weight: 900;
+    text-align: left;
+    padding-bottom: 31px;
+    padding-left: 10px;
+}
+.services__text {
+    font-size: 17px;
+    line-height: 28px;
+    color: #767e9e;
+    font-family: "Lato";
+    font-weight: 300;
+    text-align: justify;
+    padding: 0 10px;
+    letter-spacing: 0.2px;
+}
+.services__row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 46px;
+}
+.services__col {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+}
+.services__item {
+    width: 100%;
+    padding: 0 10px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 7px;
+}
+.services__img {
+    position: absolute;
+    top: 0;
+    left: 10px;
+}
+.services__content h3 {
+    font-size: 18px;
+    line-height: 17px;
+    letter-spacing: -0.1px;
+    color: #666d89;
+    font-family: "Lato";
+    font-weight: 900;
+    text-align: left;
+    padding-bottom: 10px;
+}
+.services__content p {
+    width: 219px;
+    height: 89px;
+    font-size: 12px;
+    line-height: 22px;
+    color: #767e9e;
+    font-family: "Lato";
+    font-weight: 400;
+    text-align: justify;
+}
