fix: fixed mistake with dots and h1

--- a/singolo1.css
+++ b/singolo1.css
@@ -1,4 +1,6 @@
-* {
+*,
+::before,
+::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -29,7 +31,10 @@ header {
     flex: 0 0 50%;
     max-width: 50%;
 }
-.header__logo {
+.header__logo  {
+    padding: 0 10px;
+}
+h1 {
     font-size: 25px;
     line-height: 16px;
     letter-spacing: -0.4px;
@@ -37,7 +42,6 @@ header {
     font-family: "Lato";
     font-weight: 700;
     text-align: left;
-    padding: 0 10px;
 }
 .header__logo span {
     color: #f06c64;
@@ -82,14 +86,14 @@ header {
 .header__nav__link:before {
     content: "";
     display: block;
-    width: 2px;
-    height: 2px;
+    width: 3px;
+    height: 3px;
     border-radius: 50%;
     background-color: #494e62;
 
     position: absolute;
 
-    left:0;
+    left:-2px;
     top: 50%;
     transform: translateY(-50%);
 }
