--- a/style.css
+++ b/style.css
@@ -14,14 +14,20 @@ body {
     width: 100%;
     max-width: 1020px;
     margin: 0 auto;
+    position: relative;
 }
 
 /*header*/
-header {
+.header {
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
     padding: 36px 30px 0;
     height: 95px;
+}
+.header.fixed {
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 .header__row {
     display: flex;
@@ -103,11 +109,30 @@ h1 {
 /*slider*/
 .slider {
     background-color: #f06c64;
-    border-bottom: 6px solid #ea676b;
+    /* border-bottom: 6px solid #ea676b; */
 }
 .slider__wrapper{
     position: relative;
+    overflow: hidden;
 }
+.slider__item {
+    display: none;
+    animation: 0.5s ease-in-out;
+}
+.slider__item img{
+    display: block;
+    max-width: 100%;
+}
+.slider__item.active {
+    display: block;
+}
+.slider__item.next {
+    display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
 .btn__arrow {
     background-color: transparent;
     border: none;
@@ -157,12 +182,95 @@ h1 {
    padding-left: 112px;
    padding-top: 53px;
    padding-bottom: 55px;
+
 }
 .right-img {
     position: absolute;
     top: 174px;
     right: 111px;
     z-index: 1;
+}
+.to-left {
+    animation-name: left;
+}
+.to-right {
+    animation-name: right;
+    animation-direction: reverse;
+}
+.from-left{ 
+    animation-name: left;
+    animation-direction: reverse;
+}
+.from-right{ 
+    animation-name: right;
+}
+@keyframes left {
+    from {
+        left: 0;
+    } to {
+        left: -100%;
+    }
+}
+@keyframes right {
+    from {
+        left: 100%;
+    } to {
+        left: 0;
+    }
+}
+/* black-display */
+.black-dispaly {
+    position: relative;
+}
+.black-dispaly img{
+    display: block;
+    max-width: 100%;
+}
+.black-display__ver-display {
+    display: none;
+    position: absolute;
+    top: 119px;
+    left: 126px;
+    width: 188px;
+    height: 333px;
+    background-color: black;
+}
+.black-display__ver-display.active {
+    display: block;
+}
+.black-display__ver-btn {
+    position: absolute;
+    bottom: 95px;
+    left: 198px;
+
+    width: 45px;
+    height: 45px;
+    background-color: transparent;
+    border: none;
+}
+.black-display__hor-display {
+    display: none;
+    position: absolute;
+    bottom: 221px;
+    right: 202px;
+
+    width: 333px;
+    height: 188px;
+    background-color: black;
+}
+.black-display__hor-display.active {
+    display: block;
+}
+
+.black-display__hor-btn {
+    position: absolute;
+    bottom: 293px;
+    right: 543px;
+
+    width: 45px;
+    height: 45px;
+    background-color: transparent;
+    border: none;
 }
 /*services*/
 .services {
@@ -234,6 +342,8 @@ h1 {
     text-align: justify;
     overflow: hidden;
 }
+
+
 /*portfolio*/
 .portfolio {
     padding: 67px 30px 47px;
